	PR c++/16707 	* name-lookup.c (validate_nonmember_using_decl): Robustify.

PR c++/16707
	* g++.dg/lookup/using12.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@85446 138bc75d-0d04-0410-961f-82ee72b054a4