gcc/testsuite/g++.dg/lookup/using12.C
@@ -1,0 +1,4 @@
+// PR c++/16707
+
+int i;
+using N::i; // { dg-error "declared|expected" }
